// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tagInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  background-color: #ffffff;
  padding: calc(0.75rem - 1px) 1rem;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-2:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-success="true"] {
  border-color: #22674e;
}

.emotion-2[data-error="true"] {
  border-color: #b3144d;
}

.emotion-2:hover {
  border-color: #792dd4;
}

.emotion-2[data-readonly="true"] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.emotion-2[data-disabled="true"] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-4 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.emotion-6::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6::-moz-placeholder {
  color: #727683;
}

.emotion-6:-ms-input-placeholder {
  color: #727683;
}

.emotion-6::placeholder {
  color: #727683;
}

.emotion-6[data-size="large"] {
  font-size: 1rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div>
          <div
            class="emotion-2 emotion-3"
            data-disabled="false"
            data-error="false"
            data-readonly="false"
            data-success="false"
          >
            <div
              class="emotion-4 emotion-5"
            >
              <input
                class="emotion-6 emotion-7"
                data-size="large"
                id="«r0»"
                name="test"
                placeholder="placeholder"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`tagInputField > should render correctly with regex 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  cursor: pointer;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  background-color: #ffffff;
  padding: calc(0.75rem - 1px) 1rem;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-4:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-4[data-success="true"] {
  border-color: #22674e;
}

.emotion-4[data-error="true"] {
  border-color: #b3144d;
}

.emotion-4:hover {
  border-color: #792dd4;
}

.emotion-4[data-readonly="true"] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.emotion-4[data-disabled="true"] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-6 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-10 {
  max-width: 14.5rem;
}

.emotion-12 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 0.125rem;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.emotion-14::-webkit-input-placeholder {
  color: #727683;
}

.emotion-14::-moz-placeholder {
  color: #727683;
}

.emotion-14:-ms-input-placeholder {
  color: #727683;
}

.emotion-14::placeholder {
  color: #727683;
}

.emotion-14[data-size="large"] {
  font-size: 1rem;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <label
          class="emotion-2 emotion-3 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          for="«r2»"
        >
          Test
        </label>
        <div>
          <div
            class="emotion-4 emotion-5"
            data-disabled="false"
            data-error="false"
            data-readonly="false"
            data-success="false"
          >
            <div
              class="emotion-6 emotion-7"
            >
              <span
                class="emotion-8 emotion-9"
              >
                <div
                  class="emotion-10 emotion-11 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow3c"
                >
                  4
                </div>
                <button
                  aria-label="Close tag"
                  class="emotion-12 emotion-13 uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                  data-testid="close-tag"
                  type="button"
                >
                  <svg
                    class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                    />
                  </svg>
                </button>
              </span>
              <input
                class="emotion-14 emotion-15"
                data-size="large"
                id="«r2»"
                name="test"
                placeholder=""
                type="text"
                value=""
              />
            </div>
            <div
              class="emotion-16 emotion-17"
            >
              <button
                aria-label="clear value"
                class="uv_e1wcoe0 uv_e1wcoe4 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                type="button"
              >
                <svg
                  class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <button
        class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoej uv_e1wcoeg uv_e1wcoe7 uv_e1wcoel"
        disabled=""
        type="submit"
      >
        Test
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`tagInputField > should works with defaultValues 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  cursor: pointer;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  background-color: #ffffff;
  padding: calc(0.75rem - 1px) 1rem;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-4:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-4[data-success="true"] {
  border-color: #22674e;
}

.emotion-4[data-error="true"] {
  border-color: #b3144d;
}

.emotion-4:hover {
  border-color: #792dd4;
}

.emotion-4[data-readonly="true"] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.emotion-4[data-disabled="true"] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-6 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-10 {
  max-width: 14.5rem;
}

.emotion-12 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 0.125rem;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.emotion-14::-webkit-input-placeholder {
  color: #727683;
}

.emotion-14::-moz-placeholder {
  color: #727683;
}

.emotion-14:-ms-input-placeholder {
  color: #727683;
}

.emotion-14::placeholder {
  color: #727683;
}

.emotion-14[data-size="large"] {
  font-size: 1rem;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <label
          class="emotion-2 emotion-3 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          for="«r9»"
        >
          Test
        </label>
        <div>
          <div
            class="emotion-4 emotion-5"
            data-disabled="false"
            data-error="false"
            data-readonly="false"
            data-success="false"
          >
            <div
              class="emotion-6 emotion-7"
            >
              <span
                class="emotion-8 emotion-9"
              >
                <div
                  class="emotion-10 emotion-11 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow3c"
                >
                  First
                </div>
                <button
                  aria-label="Close tag"
                  class="emotion-12 emotion-13 uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                  data-testid="close-tag"
                  type="button"
                >
                  <svg
                    class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                    />
                  </svg>
                </button>
              </span>
              <input
                class="emotion-14 emotion-15"
                data-size="large"
                id="«r9»"
                name="test"
                placeholder=""
                type="text"
                value=""
              />
            </div>
            <div
              class="emotion-16 emotion-17"
            >
              <button
                aria-label="clear value"
                class="uv_e1wcoe0 uv_e1wcoe4 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                type="button"
              >
                <svg
                  class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <button
        class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoeg uv_e1wcoe7 uv_e1wcoel"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
